# NoodleType

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  imgui.ini  settings.txt
cmake/: linux.cmake  macos.cmake  windows.cmake
src/: ImageLoad.cpp  Image_load.cpp  Image_load.h  main.cpp
src/API/: TypingSpeedAPI.cpp  TypingSpeedAPI.h
src/main_menu/: MenuButtons.cpp  MenuButtons.h  buttons.cpp  buttons.h  info.cpp
src/main_menu/Start/: PreStart.cpp  PreStart.h  Start.cpp  Start.h  start.cpp
src/main_menu/settings/: save_pressets.cpp  settings.cpp
src/settings/: save_pressets.cpp
